# MacGitver

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.root  Doxyfile.in  INSTALL.md  README.md  makedoxyfile.sh
History/: CMakeLists.txt  CreateBranchDialog.h  CreateTagDialog.h  HistoryBuilder.cpp  HistoryBuilder.h  HistoryConfig.ccfg  HistoryConfigPage.cpp  HistoryConfigPage.h  HistoryConfigPage.ui  HistoryCtxMenu.hid  HistoryDetails.cpp  HistoryDetails.h  HistoryDiff.cpp  HistoryDiff.h  HistoryEntry.cpp  HistoryEntry.h  HistoryList.cpp  HistoryList.h  HistoryListDelegate.cpp  HistoryListDelegate.h  HistoryMode.cpp  HistoryModel.cpp  HistoryModel.h  HistoryModule.cpp  HistoryModule.h  HistoryView.cpp  HistoryView.h  HistoryViewActions.hid
History/Resources/: HistoryModule.rcc  commit-detail.css
Libs/libActivities/: Activity.cpp  Activity.hpp  ActivityPrivate.hpp  Api.hpp  CMakeLists.txt  Log.cpp  Log.hpp  LogPrivate.hpp  Manager.cpp  Manager.hpp  ManagerPrivate.hpp  Step.cpp  Step.hpp  StepPrivate.hpp
Libs/libActivitiesGui/: CMakeLists.txt  ProgressDlg.cpp  ProgressDlg.ui  ProgressItems.cpp  ProgressItems.hpp
Libs/libLogger/: Api.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  Event.cpp  Event.hpp  Internal.cpp  Internal.hpp  LogChannel.cpp  LogChannel.hpp  LogConsumer.cpp  LogEvent.cpp  LogEvent.hpp  LogManager.cpp  LogManager.hpp  LogTemplate.cpp  LogTemplate.hpp  Manager.cpp  Manager.hpp  Template.cpp  Template.hpp
Libs/libMacGitverCore/: CMakeLists.txt  Images.rcc  MacGitverApi.hpp
Libs/libRepoMan/: CMakeLists.txt  Core.hpp  Events.cpp  Events.hpp  RepoMan.cpp  RepoMan.hpp
Main/: CMakeLists.txt  Info-CMake.plist  MacGitver.rcc  main.cpp
Main/Xml/: Novice.Gui.xml
Modules/: CMakeLists.txt
Modules/GitConfig/: CMakeLists.txt  GitConfigDialog.cpp  GitConfigDialog.h  GitConfigModule.cpp  GitConfigModule.h  GitConfigWidget.h
Modules/History/: CMakeLists.txt  CreateBranchDialog.cpp  CreateBranchDialog.ui  CreateTagDialog.cpp  CreateTagDialog.ui  HistoryBuilder.cpp  HistoryBuilder.h  HistoryConfigPage.cpp  HistoryConfigPage.h  HistoryCtxMenu.hid  HistoryDetails.cpp  HistoryDetails.h  HistoryDiff.cpp  HistoryDiff.h  HistoryEntry.cpp  HistoryEntry.h  HistoryList.cpp  HistoryListDelegate.h  HistoryMode.cpp  HistoryMode.hpp  HistoryModel.cpp  HistoryModel.h  HistoryModule.h  HistoryView.cpp  HistoryView.h  HistoryViewActions.hid  Module.json
Modules/Logging/: CMakeLists.txt  LoggingMode.cpp  LoggingModule.cpp  LoggingModule.hpp  LoggingView.cpp  Module.json
Modules/RefsViews/: CMakeLists.txt  Module.json  RefRenameDialog.cpp  RefRenameDialog.hpp  RefsViewDelegate.cpp  RefsViewsModule.cpp  RefsViewsModule.h
Modules/Remotes/: CMakeLists.txt  CloneRepositoryDlg.cpp  CloneRepositoryDlg.hpp  CloneWdgt.ui  RemoteCreateEditDlg.cpp  RemoteCreateEditDlg.h  RemoteCreateEditDlg.ui  RemotesDlg.cpp  RemotesDlg.h  RemotesDlg.ui  RemotesModule.cpp  RemotesModule.h  RemotesModuleActions.hid  RemotesOptionsWdgt.ui  RemotesView.cpp  RemotesView.h  RemotesViewContext.cpp  RemotesViewContext.h  RemotesWdgt.ui
Modules/RepoManLogger/: CMakeLists.txt  Listener.cpp  Listener.hpp  Module.json  RepoManLoggerModule.cpp  RepoManLoggerModule.hpp  TemplateNames.hpp
Modules/Repository/: CMakeLists.txt  CloneOptionsWdgt.hpp  CloneRepositoryDlg.cpp  CloneRepositoryDlg.h  CloneRepositoryDlg.hpp  CreateRepositoryDlg.cpp  CreateRepositoryDlg.h  ProgressDlg.hpp  ProgressDlg.ui  RepoInfoModel.cpp  RepoInfoModel.hpp  RepoTreeView.cpp  RepoTreeView.hpp  RepoTreeViewCtxMenu.hid  RepositoryContext.cpp  RepositoryModule.cpp  RepositoryModule.h  RepositoryModule.hid
Modules/Submodules/: CMakeLists.txt  SubmodulesCreateEditDlg.cpp  SubmodulesCreateEditDlg.ui  SubmodulesModule.cpp  SubmodulesView.cpp  SubmodulesViewActions.hid
Modules/Welcome/: CMakeLists.txt  ModWelcome.rcc  Module.json  Welcome.html  WelcomeModule.cpp  WelcomeView.cpp  format.css
Modules/WorkingTree/: CMakeLists.txt  CommitDialog.cpp  CommitDialog.ui  IndexTreeItemView.cpp  IndexWidget.cpp  IndexWidget.h  StageViewCtxMenu.hid  WorkingTreeAbstractItem.cpp  WorkingTreeCtxMenu.hid  WorkingTreeDirItem.h  WorkingTreeFileItem.cpp  WorkingTreeItemView.cpp  WorkingTreeModel.cpp  WorkingTreeModel.h  WorkingTreeModule.cpp  WorkingTreeModule.h
WorkingTree/: CMakeLists.txt  CommitDialog.cpp  CommitDialog.h  CommitDialog.ui  IndexTreeItemView.cpp  IndexTreeItemView.h  IndexWidget.cpp  IndexWidget.h  StageViewCtxMenu.hid  WorkingTreeAbstractItem.cpp  WorkingTreeAbstractItem.h  WorkingTreeActions.hid  WorkingTreeCtxMenu.hid  WorkingTreeDirItem.cpp  WorkingTreeFileItem.cpp  WorkingTreeFileItem.h  WorkingTreeFilterModel.cpp  WorkingTreeFilterModel.h  WorkingTreeFilters.h  WorkingTreeItemView.cpp  WorkingTreeItemView.h  WorkingTreeModel.cpp  WorkingTreeModel.h  WorkingTreeModule.cpp  WorkingTreeModule.h
libMacGitverCore/: CMakeLists.txt  MacGitverApi.hpp
libMacGitverCore/App/: AboutDlg.ui  CoreLog.cpp  CoreLog.hpp  MacGitver.cpp  MacGitver.hpp  MacGitverPrivate.hpp  MgvPrimaryWindow.cpp  MgvPrimaryWindow.hpp  MgvPrimaryWindowActions.hid  MgvPrimaryWindowPrivate.hpp
libMacGitverCore/Config/: Config.cpp  Config.h  ConfigUser.h  UserLevelDefinition.cpp  UserLevelDefinition.h
libMacGitverCore/Interfaces/: ILog.cpp  ILog.h  IRepositoryCore.h
libMacGitverCore/Log/: LogChannel.cpp  LogChannel.hpp  LogConsumer.cpp  LogConsumer.hpp  LogEvent.cpp  LogEvent.hpp  LogManager.cpp  LogManager.hpp  (+2 more)
src/: CMakeLists.txt  LicenseHeader  MainWindow.cpp  MainWindow.h  main.cpp
testMacGitverCore/: CMakeLists.txt  EventCatcher.cpp  EventCatcher.hpp  Fixture.cpp  Fixture.hpp  TempDirProvider.cpp  TempDirProvider.hpp  TempRepo.cpp  TempRepo.hpp  Test_Branch.cpp  Test_Branch.hpp  Test_Namespace.cpp  Test_Namespace.hpp  Test_Ref.hpp  Test_RefLog.cpp  Test_RefLog.hpp  Test_RefTreeNode.cpp  Test_RefTreeNode.hpp  Test_Remote.cpp  Test_Remote.hpp  Test_Repo.cpp  Test_Repo.hpp  Test_RepoMan.cpp  Test_RepoMan.hpp  Test_SHMParser.cpp  Test_SHMParser.hpp  Test_Submodule.cpp  Test_Submodule.hpp  Test_Tag.cpp  Test_Tag.hpp  main.cpp
(+1180 files in other folders)
