
INCLUDE_DIRECTORIES(
    ${MACGITVER_LIBS_SOURCE_DIR}

    # Ensure external libs are last
    ${GITWRAP_INCLUDE_DIRS}
    ${HEAVEN_INCLUDE_DIRS}
)

ADD_SUBDIRECTORY(History)
ADD_SUBDIRECTORY(GitConfig)
ADD_SUBDIRECTORY(RefsViews)
ADD_SUBDIRECTORY(Repository)
ADD_SUBDIRECTORY(Remotes)
ADD_SUBDIRECTORY(Welcome)
ADD_SUBDIRECTORY(WorkingTree)
ADD_SUBDIRECTORY(Logging)
ADD_SUBDIRECTORY(RepoManLogger)
